[package]
name = "cold-sdk"
version = "1.0.0"
edition = "2024"
description = "LAMCLOD API communication layer — extreme-performance, pure Rust, OpenAI Chat Completions compatible"
license = "MIT"
rust-version = "1.85"
readme = "README.md"
repository = "https://github.com/lamclod/cold-sdk"
keywords = ["openai", "llm", "chat", "api", "sdk"]
categories = ["api-bindings", "asynchronous"]

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
    "http2",
    "gzip",
    "brotli",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
tokio-stream = "0.1"
futures-core = "0.3"
thiserror = "2"
bytes = "1"
httpdate = "1"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "stream_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
